{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "GameControls",
            "id": "fd58b2f6-d708-4846-be91-807f85a64b88",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "845fe885-0285-4dfd-8768-5b809bd298df",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "JumpMovement",
                    "type": "Value",
                    "id": "8c31d350-bd12-45a8-9033-fe22d2fd89de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "c74a1d2c-e746-4b08-9e10-52d7f40055c1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e08ede7d-df43-4841-bd17-3aea186248a3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "828059f0-2bee-4d96-9783-98532e76cdf4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9dd9ec8c-ba0d-44e5-8813-2aba29a5e6d5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "30685ebc-94f3-4eb3-928c-600c997f33b9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8e0ef4ba-fdf2-4d6e-8b5f-0adf82f14163",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c240b49f-6535-42ec-8061-d01d1d3fe30b",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "JumpMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a79a5396-06a7-4c80-91ee-a3d544179d45",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "Tap(duration=0.1,pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "JumpMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Game",
            "bindingGroup": "Game",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}